# cs50

./: README.md
project/: .env.example  .gitignore  README.md  constants.py  pyproject.toml
project/app/: configuration.py  dictonaries.py  home.py  login.py  main.py  setup.py
week-1/: population.c
week-1/cash/: cash.c
week-1/hello/: hello.c
week-1/sentimental-mario-less/: mario.py
week-2/added-by-me/: bubble-sort.py  merge-sort.py  selection-sort.py
week-2/alpha/: alpha.c
week-2/arrays/: arrays.c
week-2/arrays-2/: array.c
week-2/bulbs/: bulbs.c
week-2/cla/: cla.c
week-2/functions/: adder-1.c
week-2/guess/: guess.c
week-2/hours/: hours.c
week-2/initials/: initials.c
week-2/readability/: readability.c
week-2/scrabble/: scrabble.c
week-2/secret/: secret.c
week-2/strings/: string.c
week-2/variables-and-scope/: scope.c
week-3-and-4/create/: create.c
week-3-and-4/max/: max.c
week-3-and-4/pdf/: pdf.c
week-3-and-4/plurality/: plurality.c
week-3-and-4/pointers/: pointers.c
week-3-and-4/recursion/: recursion.c
week-3-and-4/reverse/: reverse.c
week-3-and-4/runoff/: runoff.c
week-3-and-4/smiley/: helpers.c
week-3-and-4/sort/: answers.txt
week-5/hash-tables/: hash-tables.c
week-5/inheritance/: inheritance.c
week-5/queues/: queues.c
week-5/section/: list.c  table.c
week-5/singly-or-doubly-linked-lists/: doubly-linked-lists.c  singly-linked-lists.c
week-5/speller/: dictionary.c
week-5/stacks/: stacks.c
week-5/structures/: structures.c
week-9/: app.py  helpers.py  history.db
world-cup/: tournament.py
(+58 files in other folders)
